# Level

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  Testing.cpp  clang-win64_Toolchain.cmake  compile_commands.json
Example/: Example.cpp
Include/Axiom/: Attributes.h  Compiler.h  Features.h  Log.h  System.h  Types.h
Include/Level/: Atomic.h  Attributes.h  BitOperations.h  Features.h  Simd.h  System.h  Types.h  Utils.h
Include/Level/GCC/: Atomic.h  Attributes.h  BitOperations.h
Include/Level/Generic/: Atomic.h  Attributes.h  BitOperations.h
Include/Level/MSVC/: Atomic.h  Attributes.h  BitOperations.h
Include/Level/SIMD/: Simd.h
Include/Level/SIMD/AVX/: f32.h  f64.h  i32.h  i64.h
Include/Level/SIMD/Generic/: f32.h  f64.h  i32.h  i64.h
Include/Level/SIMD/SSE/: f32.h  f64.h  i32.h  i64.h
Include/Level/System/: Arch.h  Compiler.h  Cpp.h  Endian.h  Os.h  Sanitizer.h  Simd.h
Include/Quark/: Atomic.h  Attributes.h  Extensions.h  Features.h  Standard.h  System.h  Types.h  Utils.h
Include/Quark/Extensions/Attributes/: GCC.h  MSVC.h  Unknown.h
Include/Quark/Extensions/Keywords/: GCC.h  MSVC.h  Unknown.h
Include/Quark/GCC/: Atomic.h  Attributes.h
Include/Quark/Generic/: Atomic.h  Attributes.h
Include/Quark/MSVC/: Atomic.h  Attributes.h
Include/Quark/Standard/Attributes/: GCC.h  MSVC.h  Unknown.h
Include/Quark/Standard/Keywords/: GCC.h  MSVC.h  Unknown.h
Include/Quark/System/: Arch.h  Compiler.h  Cpp.h  Endian.h  Os.h  Sanitizer.h  Simd.h
Source/: log.cpp
